# investor-agent-financial-analysis

./: .gitignore  DEPLOYMENT_README.md  README.md  example.py  function_registry.py  main.py  pyproject.toml  requirements.txt
investor_agent/: _version.py  sentiment.py  server.py  yfinance_utils.py
src/: llm_with_tools.py
src/investor_agent/: server.py
