[project]
name = "investor-agent"
version = "0.1.1"
description = "A Model Context Protocol server for an investor agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brave-search-python-client>=0.2.22",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.2.1",
    "pydantic>=2.10.6",
    "tabulate>=0.9.0",
    "yfinance[nospam]>=0.2.54",
]
authors = [
    { name = "Ferdous", email = "ferdous@hey.com" }
]
keywords = ["investment", "finance", "trading", "agent", "mcp", "model context protocol", "broker", "robinhood", "wallstreetbets"]
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
investor-agent = "src.investor_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
